refactor(creditsEditor): bugfixes and cleanup